Update to the new generation: Java 17, Jakarta EE 9, Spring 6, Vaadin 24.